@@ -1,3 +1,6 @@
+2011-05-09 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #7152: Fix importer for non admin user
+
 2011-03-24 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Bug #13124: depreciation log messages with typo 4.5
 
